--- a/src/Styles.css
+++ b/src/Styles.css
@@ -7,8 +7,20 @@
     font-size: large;
     height: min-content;
 }
-.backgroundImage-style {
-    background-image: url('./BackgroundImage.webp');
+.mobile-warning-span-style{
+    font-family: LXGWWenkaiGB;
+    font-size: medium;
+    height: min-content;
+}
+.backgroundImage-style-light {
+    background-image: url('./BackgroundImageLight.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position-y: top;
+}
+.backgroundImage-style-dark {
+    background-image: url('./BackgroundImageDark.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position-y: top;
 }
