--- a/src/Styles.css
+++ b/src/Styles.css
@@ -11,6 +11,8 @@
     font-family: LXGWWenkaiGB;
     font-size: medium;
     height: min-content;
+    /* color: red;
+    font-weight: bold; */
 }
 .info-span-style{
     font-family: LXGWWenkaiGB;
